--- a/deploy.yml
+++ b/deploy.yml
@@ -16,7 +16,7 @@ services:
       - "gitrep=https://github.com/haqq-network/haqq.git"
       - "gitfold=haqq"
       - "SHIFT=4000"
-      - "SNAP_RPC=http://65.21.170.3:33657"  
+      - "SNAP_RPC=https://rpc.tm.testedge2.haqq.network:443"  
     command:
       - "bash"
       - "-c"
